@@ -1,0 +1,6 @@
+[NAME]
+realpath \- print the resolved path
+[DESCRIPTION]
+.\" Add any additional description here
+[SEE ALSO]
+readlink(1), readlink(2), realpath(3)
